--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,26 @@ body{
 h1{
   text-align: center;
 }
+nav{
+  border: 2px solid #072798;
+  background-color: #072798;
+  border-radius: 10px;
+}
+  nav ul{
+    width: 378px;
+    margin-left: auto;
+    margin-right: auto;
+    list-style-type: none;
+  }
+    nav ul li{
+      display: inline;
+      padding-left: 25px;
+    }
+      nav ul li a{
+        display: inline;
+        font-size: 15pt;
+        color: #fff;
+      }
 p{
   color: #046543;
   font-size: 14pt;
