--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 body{
   background-color: #4AC5E1;
 }
-h1{
+h1, h2{
   text-align: center;
 }
+
+/* nav */
 nav{
   border: 2px solid #072798;
   background-color: #072798;
@@ -23,18 +25,28 @@ nav{
         display: inline;
         font-size: 15pt;
         color: #fff;
+        text-decoration: none; 
       }
+.container{
+  border: 2px solid red;
+}
 p{
   color: #046543;
   font-size: 14pt;
   text-align: center;
 }
-a{
-  text-decoration: none;
+
+/* book now button */
+#book_now{
   width: 100px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+  height: 50px;
+  border-radius: 10px;
+  background-color: #072798;
+  border: 2px solid #072798;
+  color: #fff;
+  font-size: 12pt;
+  font-weight: bold;
+  margin-left: 44%;
 }
 img{
   height: 350px;
@@ -43,4 +55,11 @@ img{
   padding-top: 15px;
   margin-left: auto;
   margin-right: auto;
+}
+
+/* about */
+.about_site{
+  border: 2px solid green;
+  height: 400px;
+  margin-top: 15px;
 }
